--- a/package.json
+++ b/package.json
@@ -5,14 +5,20 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.3",
     "axios": "^1.6.8",
+    "browserify-zlib": "^0.2.0",
     "concurrently": "^8.2.1",
+    "express": "^4.19.2",
+    "node-modules": "^1.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^4.10.1",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^10.0.5",
     "react-type-animation": "^3.1.0",
+    "url": "^0.11.3",
     "web-vitals": "^2.1.4"
   },
   "repository": {
